Ensure cell's replaced content doesn't get the wrong width

https://bugs.webkit.org/show_bug.cgi?id=269763
rdar://123658956

Reviewed by Alan Baradlay.

Merge: https://chromium.googlesource.com/chromium/src.git/+/03d66d9ce1e602df26a9d544d9258a88b9194349

We need to make the cell's height unusable for calculating perecent/calc height
against before computing its preferred width, otherwise replaced children may use it
to scale up their intrinsic width.

* Source/WebCore/rendering/RenderTableCell.cpp:
(WebCore::RenderTableCell::computePreferredLogicalWidths):
* LayoutTests/fast/table/percent-height-replaced-content-in-cell-expected.txt:
* LayoutTests/fast/table/percent-height-replaced-content-in-cell.html:
* LayoutTests/fast/table/resources/border-image-srgb-color-profile.png:

Canonical link: https://commits.webkit.org/288316@main